# cardano-conformance-harness

./: .gitignore  Cargo.toml  README.md  block_fetch_test_output.txt  docker-compose.yml
docs/: adversarial_production.md  block_fetch_conformance_results.md  network_declarations.md
fixtures/: .gitkeep
scenarios/: as_peer_overrides_peer_id.json  assertion_demo.json  auto_production_every_5_slots.json  auto_production_two_peers_different_rules.json  block_consistency_across_sessions.json  block_fetch_batch_done_without_start.json  block_fetch_block_outside_batch.json  block_fetch_excessive_blocks.json  block_fetch_malformed_block.json  block_fetch_mid_batch_disconnect.json  block_fetch_no_blocks_after_start.json  broken_chain_integrity.json  capture_blocks_for_fixture.json  capture_chain_for_fixture.json  chain_sync_only.json  chain_sync_then_block_fetch.json  client_block_fetch_one_range.json  combined_variables.json  conflicting_forks.json  leios_bait_and_switch_block.json  leios_cascading_vote_batches.json  leios_compound_adversarial_session.json  leios_double_vote.json  leios_duplicate_block_offer.json  leios_eb_body_hash_mismatch.json  leios_eb_empty_transactions.json  leios_eb_invalid_vrf.json  leios_equivocating_producer.json  leios_equivocation_after_partial_votes.json  leios_equivocation_blocks_certification.json  leios_equivocation_then_valid_fetch.json  leios_equivocation_vote_flood.json  leios_fetch_disconnect.json  leios_full_pipeline_valid_eb.json  leios_honest_then_adversarial.json  leios_interleaved_quorum_race.json  leios_interleaved_votes_two_ebs.json  (+42 more)
(+25 files in other folders)
